--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ input:focus{
   transition: 1s;
 }
 
-#search_box i:hover{color: orange;}
+#search_box i:hover{color: rgb(83, 105, 4);}
 
 #grid{
   width: 100%;
